# docling-test

./: .gitignore  .python-version  README.md  pyproject.toml
src/: __main__.py  clean_html.py  main.py  otel.py  parse_expense.py  settings.py
src/ai_parsing/: lang.py  model.py  prompts.py  run_ollama.py
src/conversions/: parse_expense.py
