[project]
name = "docling-test"
version = "0.1.0"
description = "Testing docling with Ollama and Tesseract OCR"
authors = [{ name = "Gustavo Santos", email = "gustavosisa@outlook.com" }]
dependencies = [
    "docling>=2.14.0",
    "tesserocr>=2.7.1",
    "ollama>=0.4.4",
    "mdformat>=0.7.21",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.10"
optional-dependencies = { dev = ["ruff>=0.8.4", "mypy>=1.14.0"] }
